2005-10-25  Jonathan Pryor <jonpryor@vt.edu>

	* FileNameMarshaler.cs: Custom marshaler to marshal filenames using
	  Mono.Unix.UnixEncoding.  A custom marshaler is used to remove the need to
	  have ~6 lines of boilerplate on every method that takes filenames.
	* Stdlib.cs, Syscall.cs:  Filenames need to be marshaled through the
	  FileNameMarshaler, which will encode/decode filenames with UnixEncoder.

2005-10-14  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs, Syscall.cs: Flush naming convention documentation.

2005-10-14  Jonathan Pryor <jonpryor@vt.edu>

	* NativeConvert.generated.cs: Flush currently generated version.

2005-10-14  Jonathan Pryor <jonpryor@vt.edu>

	* make-map.cs: Fix documentation comment.
	* Stdlib.cs: Fix export of XprintfFunctions.syslog(); make SetLastError()
	  protected (normal user code shouldn't call it, as it isn't safe); 
	  replace functions which return `void' with functions which return `int'
	  (adding them to MonoPosixHelper.so as well) -- since users can't reliably
	  use SetLastError(), they need the "normal" error detection mechanism;
	  correct the strlen(3) export.
	* Syscall.cs: 
	  - s/PathConf/PathconfName/, s/SysConf/SysconfName/, s/ConfStr/ConfstrName/ 
	    to follow documented enumeration naming conventions.
	  - replace functions which return `void' with functions which return `int'
	    (adding them to MonoPosixHelper.so as well) -- since users can't reliably
	    use SetLastError(), they need the "normal" error detection mechanism;

2005-10-13 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Stdlib.cs: add strlen() to fix the build.

2005-09-23  Jonathan Pryor <jonpryor@vt.edu>

	* make-map.cs: Generate NativeConvert documentation XML fragments for use in
	  monodoc.

2005-09-20  Jonathan Pryor <jonpryor@vt.edu>

	* ChangeLog: Started.
	* CdeclFunction.cs: Copied from ../Mono.Unix; change namespace.
	* HeaderAttribute.cs: Added
	* make-map.cs: Copied from ../Mono.Unix; sort type and member names in