@@ -1,3 +1,11 @@
+2005-10-26  Jonathan Pryor <jonpryor@vt.edu>
+
+	* Stdlib.cs: FilePosition should derive from MarshalByRefObject, for two
+	  reasons: (1) it's a recommendation from FxCop that classes implementing
+	  IDisposable also derive from MarshalByRefObject; (2) FilePosition is
+	  exposed from Mono.Unix.StdioFileStream, which (indirectly) inherits from
+	  MarshalByRefObject.  Fix Equals() so it doesn't rely on Reflection.
+
 2005-10-25  Jonathan Pryor <jonpryor@vt.edu>
 
 	* FileNameMarshaler.cs: Custom marshaler to marshal filenames using
